[package]
name = "consensus-benchmarking"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "generate"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
deadpool-postgres = "0.10.3"
futures = "0.3"
native-tls = "0.2"
postgres-native-tls = "0.5"
rand = { version = "0.9", features = ["small_rng"] }
rand_distr = "0.5"
tokio = { version = "1.44.1", default-features = false, features = [
    "macros",
    "sync",
    "rt",
    "rt-multi-thread",
] }
tokio-postgres = "0.7.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
